# CronixUI

./: .gitignore  AGENT.md  CHANGELOG.md  DESIGN_SYSTEM.md  MANIFEST.in  README.md  ROADMAP.md  flintui_demo.html  flintui_doc.docx  package.json  pyproject.toml
.github/workflows/: deploy-develop.yml  deploy-main.yml  develop-to-main-pr.yml  go-ci.yml  multi-language-ci.yml  pypi.yml  python-ci.yml  react-ci.yml  web-ci.yml
FOR_AGENTS/: AGENT.md  AGENTS.md  COMPONENTS.md  DESIGN.md  MEMORY.md  STRUCTURE.md  WORKFLOW.md
demo/: flintui.css  index.html
docs/: astro.config.mjs  package.json
docs/src/components/: Section.astro
docs/src/data/: spec.ts
docs/src/layouts/: BaseLayout.astro
docs/src/pages/: developers.astro  index.astro  tokens.astro
docs/src/pages/components/: [name].astro  index.astro
examples/: demo.py
src/: flintui.css
tests/: __init__.py  conftest.py  test_badge.py  test_button.py  test_card.py  test_core.py  test_toast.py  test_tokens.py
website/: index.html  package-lock.json
website/src/: App.tsx  index.css
website/src/components/: Layout.tsx
website/src/pages/: Components.tsx  Home.tsx  Install.tsx
