[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cronixui"
version = "1.0.6"
description = "CronixUI - A dark-themed UI toolkit with crimson accents and Outfit typography"
readme = "README.md"
license = {text = "GPL-3.0"}
authors = [{name = "CazyUndee"}]
keywords = ["ui", "dark-mode", "design-system", "components"]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Repository = "https://github.com/CazyUndee/CronixUI"

[tool.setuptools.packages.find]
where = ["packages/python"]
include = ["cronixui*"]

[tool.setuptools]
include-package-data = false
